# lorenz-attractor-3d

./: Cargo.toml  README.md  run_lorenz.bat
src/: config.rs  main.rs
src/rendering/: camera_controller.rs  mod.rs  trail_renderer.rs
src/simulation/: integrator.rs  lorenz.rs  mod.rs
src/ui/: controls.rs
